Development version (next version)
- Fixed compatibility with CMake 4.0
- Applied clang-format code style formatting
- Added tuned parameters for many devices (see doc/tuning.md)
- Enabled parallel kernel compilation for faster kernel tuning (see doc/tuning.md)
- Removed all generator scripts for the API

Version 1.6.3
- Fixed a bug in the GEMMK=1 kernel (with 2D register tiling) when MWG!=NWG
- CMake fixes for older versions and for the CUDA backend
- Added tuned parameters for many devices (see doc/tuning.md)

Version 1.6.2
- Fix a bug in the pre-processor that would cause issues on Arm GPUs
- Fix DLL install directory in mingw
- Modifications to the Python bindings (pyclblast)
  * Convert float scalar values to cl_half for fp16 routines
  * Amax/amin, max/min routines accept unsigned integer buffers for index
  * Switch to pyproject.toml file for installing Python bindings
  * Build Python bindings using Cmake, adding Windows support
- Generator script now always use LF endings, independent of the platform
- Added tuned parameters for many devices (see doc/tuning.md)

Version 1.6.1
- Fix pointer error in pyclblast on Arm
- Fix a multithreading bug related to storing objects in the cache
- Added tuned parameters for many devices (see doc/tuning.md)

Version 1.6.0
- Modifications to improve performance on Qualcomm Adreno GPUs:
  * Unique database entries for specific Adreno devices
  * Toggle OpenCL kernel compilation options for Adreno
  * New preprocessor directive RELAX_WORKGROUP_SIZE
- Fixed a bug in handling of #undef in CLBlast loop unrolling and array-to-register mapping functions
- Fixed a bug in XAMAX/XAMIN routines related to inadvertently including the increment and offset in the result
- Fixed a bug in XAMAX/XAMIN routines that would cause only the real part of a complex number to be taken into account
- Fixed a bug that caused tests to not properly do integer-output testing (for XAMAX/XAMIN)