@@ -4,6 +4,7 @@ Development version (next version)
 - Added tuned parameters for many devices (see doc/tuning.md)
 - Enabled parallel kernel compilation for faster kernel tuning (see doc/tuning.md)
 - Removed all generator scripts for the API
+- Added 3 new error codes for vector Z in routine XHAD
 
 Version 1.6.3
 - Fixed a bug in the GEMMK=1 kernel (with 2D register tiling) when MWG!=NWG
